--- a/index.html
+++ b/index.html
@@ -56,6 +56,24 @@
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
         <p>R169.99 - 10 mins</p>
       </div>
+      <div class="item" onclick="showFullscreen(3)">
+        <img src="mini_platter.jpg" alt="Mini Platter" />
+        <h4>Mini Platter</h4>
+        <p class="description">Mini sliders, spicy fries, nuggets.</p>
+        <p>R169.99 - 10 mins</p>
+      </div>
+      <div class="item" onclick="showFullscreen(4)">
+        <img src="mini_platter.jpg" alt="Mini Platter" />
+        <h4>Mini Platter</h4>
+        <p class="description">Mini sliders, spicy fries, nuggets.</p>
+        <p>R169.99 - 10 mins</p>
+      </div>
+      <div class="item" onclick="showFullscreen(5)">
+        <img src="mini_platter.jpg" alt="Mini Platter" />
+        <h4>Mini Platter</h4>
+        <p class="description">Mini sliders, spicy fries, nuggets.</p>
+        <p>R169.99 - 10 mins</p>
+      </div>
     </div>
   </section>
 
@@ -65,13 +83,31 @@
   <section class="section section-3 vertical">
     <h2 class="centered">Popular Dishes</h2>
     <div class="carousel" id="carousel1">
-      <div class="item" onclick="showFullscreen(3)">
+      <div class="item" onclick="showFullscreen(6)">
         <img src="patty_planet.jpg" alt="Patty Planet" />
         <h4>Patty Planet</h4>
         <p>Beef patty, fresh lettuce, tomato, cheese.</p>
         <p>R59.99 - 12 mins</p>
       </div>
-      <div class="item" onclick="showFullscreen(4)">
+      <div class="item" onclick="showFullscreen(7)">
+        <img src="triple_planet.jpg" alt="Triple Planet" />
+        <h4>Triple Planet</h4>
+        <p>Three stacked patties, BBQ sauce, onion rings.</p>
+        <p>R69.99 - 8 mins</p>
+      </div>
+       <div class="item" onclick="showFullscreen(8)">
+        <img src="triple_planet.jpg" alt="Triple Planet" />
+        <h4>Triple Planet</h4>
+        <p>Three stacked patties, BBQ sauce, onion rings.</p>
+        <p>R69.99 - 8 mins</p>
+      </div>
+       <div class="item" onclick="showFullscreen(9)">
+        <img src="triple_planet.jpg" alt="Triple Planet" />
+        <h4>Triple Planet</h4>
+        <p>Three stacked patties, BBQ sauce, onion rings.</p>
+        <p>R69.99 - 8 mins</p>
+      </div>
+       <div class="item" onclick="showFullscreen(10)">
         <img src="triple_planet.jpg" alt="Triple Planet" />
         <h4>Triple Planet</h4>
         <p>Three stacked patties, BBQ sauce, onion rings.</p>
@@ -86,13 +122,13 @@
   <section class="section section-4 vertical">
     <h2 class="centered">Quick Bites</h2>
     <div class="carousel" id="carousel2">
-      <div class="item" onclick="showFullscreen(5)">
+      <div class="item" onclick="showFullscreen(11)">
         <img src="hotdog.jpg" alt="Hotdog" />
         <h4>Hotdog</h4>
         <p>Classic hotdog, mustard, ketchup, fried onions.</p>
         <p>R40 - 10 mins</p>
       </div>
-      <div class="item" onclick="showFullscreen(6)">
+      <div class="item" onclick="showFullscreen(12)">
         <img src="chefs_special.jpg" alt="Chef's Special" />
         <h4>Chef's Special</h4>
         <p>Signature dish by our head chef with gourmet toppings.</p>
