--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
         <p>R169.99 - 10 mins</p>
       </div>
+            <div class="item" onclick="showFullscreen(6)">
+        <img src="mini_platter.jpg" alt="Mini Platter" />
+        <h4>Mini Platter</h4>
+        <p class="description">Mini sliders, spicy fries, nuggets.</p>
+        <p>R169.99 - 10 mins</p>
+      </div>
     </div>
   </section>
 
@@ -83,19 +89,13 @@
   <section class="section section-3 vertical">
     <h2 class="centered">Popular Dishes</h2>
     <div class="carousel" id="carousel1">
-      <div class="item" onclick="showFullscreen(6)">
+      <div class="item" onclick="showFullscreen(7)">
         <img src="patty_planet.jpg" alt="Patty Planet" />
         <h4>Patty Planet</h4>
         <p>Beef patty, fresh lettuce, tomato, cheese.</p>
         <p>R59.99 - 12 mins</p>
       </div>
-      <div class="item" onclick="showFullscreen(7)">
-        <img src="triple_planet.jpg" alt="Triple Planet" />
-        <h4>Triple Planet</h4>
-        <p>Three stacked patties, BBQ sauce, onion rings.</p>
-        <p>R69.99 - 8 mins</p>
-      </div>
-       <div class="item" onclick="showFullscreen(8)">
+      <div class="item" onclick="showFullscreen(8)">
         <img src="triple_planet.jpg" alt="Triple Planet" />
         <h4>Triple Planet</h4>
         <p>Three stacked patties, BBQ sauce, onion rings.</p>
