--- a/index.html
+++ b/index.html
@@ -45,37 +45,37 @@
     <h2 class="centered">Explore Our Platters of Taste</h2>
     <div class="train-items" id="trainItems">
       <div class="item" onclick="showFullscreen(1)">
-        <img src="premium_platter.jpg" alt="Premium Platter" />
+        <img src="section1.jpeg" alt="Premium Platter" />
         <h4>Premium Platter</h4>
         <p class="description">Grilled chicken, spicy wings, samosas, fries.</p>
         <p>R249.99 - 15 mins</p>
       </div>
       <div class="item" onclick="showFullscreen(2)">
-        <img src="mini_platter.jpg" alt="Mini Platter" />
+        <img src="section1.jpeg" alt="Mini Platter" />
         <h4>Mini Platter</h4>
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
         <p>R169.99 - 10 mins</p>
       </div>
       <div class="item" onclick="showFullscreen(3)">
-        <img src="mini_platter.jpg" alt="Mini Platter" />
+        <img src="section1.jpeg" alt="Mini Platter" />
         <h4>Mini Platter</h4>
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
         <p>R169.99 - 10 mins</p>
       </div>
       <div class="item" onclick="showFullscreen(4)">
-        <img src="mini_platter.jpg" alt="Mini Platter" />
+        <img src="section1.jpeg" alt="Mini Platter" />
         <h4>Mini Platter</h4>
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
         <p>R169.99 - 10 mins</p>
       </div>
       <div class="item" onclick="showFullscreen(5)">
-        <img src="mini_platter.jpg" alt="Mini Platter" />
+        <img src="section1.jpeg" alt="Mini Platter" />
         <h4>Mini Platter</h4>
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
         <p>R169.99 - 10 mins</p>
       </div>
             <div class="item" onclick="showFullscreen(6)">
-        <img src="mini_platter.jpg" alt="Mini Platter" />
+        <img src="section1.jpeg" alt="Mini Platter" />
         <h4>Mini Platter</h4>
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
         <p>R169.99 - 10 mins</p>
@@ -90,13 +90,13 @@
     <h2 class="centered">Popular Dishes</h2>
     <div class="carousel" id="carousel1">
       <div class="item" onclick="showFullscreen(7)">
-        <img src="patty_planet.jpg" alt="Patty Planet" />
+        <img src="section1.jpeg" alt="Patty Planet" />
         <h4>Patty Planet</h4>
         <p>Beef patty, fresh lettuce, tomato, cheese.</p>
         <p>R59.99 - 12 mins</p>
       </div>
       <div class="item" onclick="showFullscreen(8)">
-        <img src="triple_planet.jpg" alt="Triple Planet" />
+        <img src="section1.jpeg" alt="Triple Planet" />
         <h4>Triple Planet</h4>
         <p>Three stacked patties, BBQ sauce, onion rings.</p>
         <p>R69.99 - 8 mins</p>
@@ -111,13 +111,13 @@
     <h2 class="centered">Quick Bites</h2>
     <div class="carousel" id="carousel2">
       <div class="item" onclick="showFullscreen(9)">
-        <img src="hotdog.jpg" alt="Hotdog" />
+        <img src="section1.jpeg" alt="Hotdog" />
         <h4>Hotdog</h4>
         <p>Classic hotdog, mustard, ketchup, fried onions.</p>
         <p>R40 - 10 mins</p>
       </div>
       <div class="item" onclick="showFullscreen(10)">
-        <img src="chefs_special.jpg" alt="Chef's Special" />
+        <img src="section1.jpeg" alt="Chef's Special" />
         <h4>Chef's Special</h4>
         <p>Signature dish by our head chef with gourmet toppings.</p>
         <p>R299.99 - 20 mins</p>
@@ -138,29 +138,6 @@
     </div>
   </section>
 
-  <hr />
-
-  <!-- Section 6: Reviews -->
-  <section class="section section-6 vertical">
-    <h2 class="centered">What Our Customers Say</h2>
-    <div class="reviews">
-      <div class="review">
-        <img src="customer1.jpg" alt="Customer 1" class="review-img">
-        <p>"Absolutely love the modern twist on classic dishes!"</p>
-        <h4>- Samantha</h4>
-      </div>
-      <div class="review">
-        <img src="customer2.jpg" alt="Customer 2" class="review-img">
-        <p>"Great food, friendly staff, and super fast service."</p>
-        <h4>- John</h4>
-      </div>
-      <div class="review">
-        <img src="customer3.jpg" alt="Customer 3" class="review-img">
-        <p>"I can't stop ordering the Patty Planet. Always hot!"</p>
-        <h4>- Aisha</h4>
-      </div>
-    </div>
-  </section>
 
   <hr />
 
@@ -174,8 +151,8 @@
   <!-- Footer -->
   <footer class="animated-footer">
     <div class="footer-content">
-      <img src="logo1.jpeg" alt="Logo" />
-      <p>&copy; 2025 Food Ordering | Designed by Neo</p>
+      <img src="logo.png" alt="Logo" />
+      <p>&copy; 2025 Rakeng | Designed by Neo</p>
       <div class="footer-links">
         <a href="#">Privacy</a><a href="#">Terms</a><a href="mailto:contact@rakengfoods.com">Email</a>
       </div>
