--- a/index.html
+++ b/index.html
@@ -48,37 +48,37 @@
         <img src="section1.jpeg" alt="Premium Platter" />
         <h4>Premium Platter</h4>
         <p class="description">Grilled chicken, spicy wings, samosas, fries.</p>
-        <p>R249.99 - 15 mins</p>
+        <p>R249.99</p>
       </div>
       <div class="item" onclick="showFullscreen(2)">
         <img src="section1.jpeg" alt="Mini Platter" />
         <h4>Mini Platter</h4>
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
-        <p>R169.99 - 10 mins</p>
+        <p>R169.99</p>
       </div>
       <div class="item" onclick="showFullscreen(3)">
         <img src="section1.jpeg" alt="Mini Platter" />
         <h4>Mini Platter</h4>
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
-        <p>R169.99 - 10 mins</p>
+        <p>R169.99</p>
       </div>
       <div class="item" onclick="showFullscreen(4)">
         <img src="section1.jpeg" alt="Mini Platter" />
         <h4>Mini Platter</h4>
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
-        <p>R169.99 - 10 mins</p>
+        <p>R169.99</p>
       </div>
       <div class="item" onclick="showFullscreen(5)">
         <img src="section1.jpeg" alt="Mini Platter" />
         <h4>Mini Platter</h4>
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
-        <p>R169.99 - 10 mins</p>
+        <p>R169.99</p>
       </div>
             <div class="item" onclick="showFullscreen(6)">
         <img src="section1.jpeg" alt="Mini Platter" />
         <h4>Mini Platter</h4>
         <p class="description">Mini sliders, spicy fries, nuggets.</p>
-        <p>R169.99 - 10 mins</p>
+        <p>R169.99</p>
       </div>
     </div>
   </section>
@@ -93,13 +93,13 @@
         <img src="section1.jpeg" alt="Patty Planet" />
         <h4>Patty Planet</h4>
         <p>Beef patty, fresh lettuce, tomato, cheese.</p>
-        <p>R59.99 - 12 mins</p>
+        <p>R59.99</p>
       </div>
       <div class="item" onclick="showFullscreen(8)">
         <img src="section1.jpeg" alt="Triple Planet" />
         <h4>Triple Planet</h4>
         <p>Three stacked patties, BBQ sauce, onion rings.</p>
-        <p>R69.99 - 8 mins</p>
+        <p>R69.99</p>
       </div>
     </div>
   </section>
@@ -114,13 +114,13 @@
         <img src="section1.jpeg" alt="Hotdog" />
         <h4>Hotdog</h4>
         <p>Classic hotdog, mustard, ketchup, fried onions.</p>
-        <p>R40 - 10 mins</p>
+        <p>R40</p>
       </div>
       <div class="item" onclick="showFullscreen(10)">
         <img src="section1.jpeg" alt="Chef's Special" />
         <h4>Chef's Special</h4>
         <p>Signature dish by our head chef with gourmet toppings.</p>
-        <p>R299.99 - 20 mins</p>
+        <p>R299.99</p>
       </div>
     </div>
   </section>
@@ -157,13 +157,9 @@
         <a href="#">Privacy</a><a href="#">Terms</a><a href="mailto:contact@rakengfoods.com">Email</a>
       </div>
       <div class="socials">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-tiktok"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
-        <a href="#"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.facebook.com/p/Rakeng-100063775613334/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/officialrakeng/?hl=en"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.tiktok.com/@rakeng.official"><i class="fab fa-tiktok"></i></a>
       </div>
     </div>
   </footer>
