--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="left">
       <h1>Delicious <span>Meals</span> Anytime</h1>
       <p>At RAK'ENG, we're more than just fast food… every <span>appetite</span>, every <span>age</span>, every <span>time</span></p>
-      <a class="map-btn" href="https://www.google.com/maps" target="_blank">Find Us on Map</a>
+      <a class="map-btn" href="https://maps.app.goo.gl/ac4zLmrBKBZCanJJA" target="_blank">Find Us on Map</a>
     </div>
     <div class="right">
       <img src="section1.jpeg" alt="Delicious Food" class="circle-img bounce-img" />
